--- a/src/components/Joke.css
+++ b/src/components/Joke.css
@@ -1,3 +1,49 @@
 .Joke{
     display: flex;
+    border-bottom: 2px solid #eee;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
+    padding: 1rem;
+}
+
+.Joke-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 1rem;
+    width: 15%;
+    gap: .5rem;
+}
+
+.Joke-text{
+    width: 70%;
+    /* text-align: center; */
+    font-style: 1.2rem;
+}
+
+.Joke-votes{
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 20px;
+    font-weight: 300;
+    border: 2px solid red;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.1);
+    
+}
+
+.fa-arrow-up,
+.fa-arrow-down{
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+.Joke-smiley{
+    font-size: 2.8rem;
+    margin-left: auto;
+    border-radius: 50%;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.1);
 }
