--- a/src/components/JokeList.css
+++ b/src/components/JokeList.css
@@ -68,3 +68,31 @@
     left:60%;
     transform: translate(-50%, -50%);
 }
+
+.JokeList-getmore{
+    font-size: 1.5rem;
+    width: 70%;
+    border: none;
+    outline: none;
+    font-weight: 700;
+    border-radius: 2rem;
+    padding: 1rem 2rem;
+    color: #fff;
+    margin: 2rem;
+    word-spacing: 3rem;
+    cursor: pointer;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.1);
+    transition: .8s cubic-bezier(.2,1,.2,1);   
+    background: linear-gradient(
+        135deg,
+        rgba(179,229,252,1) 0%,
+        rgba(179,229,252,1) 50%,
+        rgba(240,98,146,1) 50%,
+        rgba(240,98,146,1) 100%
+    );
+}
+.JokeList-getmore:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+
+}
